tests/baselines/reference/jsdocTypeReferenceToMergedClass.errors.txt
jsdocTypeReferenceToMergedClass.js(6,1): error TS2454: Variable 'p' is used before being assigned.


==== jsdocTypeReferenceToMergedClass.js (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/34685
    
    var Workspace = {}
    /** @type {Workspace.Project} */
    var p;
    p.isServiceProject()
    ~
!!! error TS2454: Variable 'p' is used before being assigned.
    
    Workspace.Project = function wp() { }
    Workspace.Project.prototype = {
      isServiceProject() {}
    }
    